<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="Notification">
        <CheckBoxPreference
            android:key="pref_notif_activated"
            android:title="@string/pref_notification_activated"
            android:summary="@string/pref_notification_activated_sum"
            android:defaultValue="true">
        </CheckBoxPreference>
        <ListPreference
        android:dependency="pref_notif_activated"
        android:key="pref_notification_time"
        android:title="@string/pref_notification_time"
        android:summary="@string/pref_notification_time_sum"
        android:dialogTitle="@string/pref_notification_time"
        android:entries="@array/pref_notification_time_entries"
        android:entryValues="@array/pref_notification_time_value"
        android:defaultValue="@string/pref_notification_time_default"/>
    </PreferenceCategory>

</PreferenceScreen>